# CommandFS

./: Cargo.toml  README.md
examples/change_dir/: main.rs
examples/load_or_read/: main.rs
examples/load_to_read/: main.rs
examples/perform/: main.rs
examples/read/: main.rs
examples/write/: main.rs
src/lib/: file_handel.rs  file_perform.rs  file_query.rs  lib.rs
